--- a/quiz1.html
+++ b/quiz1.html
@@ -12,7 +12,7 @@ body{
 <body>
 <h2>Web Programming</h2>
 <p>95% of programmers can't get a 10/10 on this quiz. Can You?</p><br>
-<a href="" target="_blank">Go to quiz</a>
+<a href="webprog1.html" target="_blank">Go to quiz</a>
 
 </body>
 </html>
