--- a/quiz2.html
+++ b/quiz2.html
@@ -12,7 +12,7 @@ body{
 <body>
 <h2>Java</h2>
 <p>This one's for the Java know-it-alls. Are you one of them?</p><br>
-<a href="" target="_blank">Go to quiz</a>
+<a href="webprog2.html" target="_blank">Go to quiz</a>
 
 </body>
 </html>
