--- a/quiz3.html
+++ b/quiz3.html
@@ -12,7 +12,7 @@ body{
 <body>
 <h2>Data Structures</h2>
 <p>Are you one of the quick solution fetchers? But want to make sure you remember your basics?</p>
-<a href="" target="_blank">Go to quiz</a>
+<a href="webprog3.html" target="_blank">Go to quiz</a>
 
 </body>
 </html>
