--- a/quiz4.html
+++ b/quiz4.html
@@ -12,7 +12,7 @@ body{
 <body>
 <h2>Computer Organisation and Architecture</h2>
 <p>Love Hardware? Let's find out.</p>
-<a href="" target="_blank">Go to quiz</a>
+<a href="webprog4.html" target="_blank">Go to quiz</a>
 
 </body>
 </html>
