--- a/webprog2.html
+++ b/webprog2.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="css/quizlink.css" rel="stylesheet" type="text/css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<!-- <script src="scripts/webprog2.js"></script> -->
+<script src="scripts/webprog2.js"></script>
 <title>Quizofy</title>
 </head>
 
