--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 			<li><a href="about.html"><b>About</b></a></li>
 			<li><a href="topics.html"><b>Topics</b></a></li>
 			<li style="float:right"><a href="https://goo.gl/forms/NyQObKza4ckmmHpo1" target="_blank"><b>Feedback</b></a></li>
-
+			
 		</ul>
 	</nav>
 	<!--<div class="sidebar">
@@ -27,11 +27,15 @@
 		
 	</div>-->
 	<div class="main">
-	<h1><center>Challenge yourself with quizzes from a selection of topics</center></h1>
-	<iframe src="quiz1.html"></iframe>
-	<iframe src="quiz2.html"></iframe>
-	<iframe src="quiz3.html"></iframe>
-	<iframe src="quiz4.html"></iframe>
+	<h1>About</h1>
+	<p>This website is created by Netra Ghaisas and Bhagyashree Phadnis.
+	<br>The Quizofy website is primarily created as part of a project assignment for the course Basics of Web Programming.
+	<br>But this website means more than just a mere project. It is our first tiny step in this ocean of websites and coding.
+	<br>We hope you enjoyed answering these quizzes and will keep coming back for more.
+	<br>That's all from our side. Thank you.
+	</p>
+	<img src="us.jpg" alt="two pretty girls" width="150" height="110">
+	</img>
 	
 	</div>
 
