--- a/webprog3.html
+++ b/webprog3.html
@@ -18,7 +18,7 @@
 	<nav>
 		<ul>
 			<li><a href="index.html"><b>Home</b></a></li>
-			<li><a href=""><b>About</b></a></li>
+			<li><a href="about.html"><b>About</b></a></li>
 			<li><a href="topics.html"><b>Topics</b></a></li>
 			<li style="float:right"><a href="https://goo.gl/forms/NyQObKza4ckmmHpo1" target="_blank"><b>Feedback</b></a></li>
 			
